reduced introduction font size to prevent overwrap

--- a/css/style.css
+++ b/css/style.css
@@ -378,7 +378,7 @@ html, body {
 
     .intro-box #introduction {
         padding: 0 0 35vh 3vw;
-        font-size: 6.1vw;
+        font-size: 5.5vw;
         width: 93vw;
     }
 
